Add --cache-dir program option